# guildlite

./: #ROADMAP.md#  .gitignore  .gitmodules  BUILD.md  FEEDBACK.md  FIX.md  FULL-ENGINE.md  INJECTOR.md  MODEL-EXPORT-SETTINGS.md  MODELMOD-FINDINGS.md  PLAN.md  PROPOSAL.md  README.md  ROADMAP.md  SSH-AND-WINDOWS.md  armors.tsv  build.sh  deploy_to_windows.sh  labels.md
datcore/: CMakeLists.txt  CMakePresets.json  README.md
datcore/include/datcore/: amat_file.h  atex_asm.h  catalog.h  dat.h  ffna_fvf.h  ffna_model.h  ffna_type.h  labels.h  model.h  msvc_compat.h  texture.h  texture_atex.h  xentax.h
datcore/src/: atex_asm_win.cpp  atex_decompress.cpp  atex_flag_win.cpp  atex_reader.cpp  atex_stub.cpp  catalog.cpp  dat.cpp  labels.cpp  model.cpp  murmur3.cpp  texture.cpp  xentax.cpp
datcore/tools/: datcli.cpp  extract_armors.py
feedback-images/: random-nearby-object-exported-not-me-settings.json  settings-only-exported-cape.txt
gui/: CMakeLists.txt  README.md
gui/src/: ControlConsole.cpp  ControlConsole.h  Proc.cpp  Proc.h  Transport.cpp  Transport.h  main.mm
injector/: CMakeLists.txt  vcpkg.json
injector/src/: AppearanceApply.cpp  AppearanceApply.h  Capture.cpp  Capture.h  Commands.cpp  Commands.h  Controls.cpp  Controls.h  Editor.cpp  Editor.h  EditorConfig.h  Exporter.cpp  Exporter.h  Freecam.cpp  Freecam.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GuildliteConfig.h  Info.cpp  Info.h  Log.h  ObjWriter.cpp  ObjWriter.h  Overlay.cpp  Overlay.h  Screenshot.cpp  Screenshot.h  Settings.cpp  Settings.h  TextureExport.cpp  TextureExport.h  core_main.cpp  dllmain.cpp  inject_main.cpp  stl.h  stub_main.cpp
injector/vcpkg-overlays/triplets/: x86-windows-mixed.cmake
labels/npc-hero-livia-/: target_pn4_map248_20260708-190259.json  target_pn4_map248_20260708-190259.mtl  target_pn4_map248_20260708-190319.json  target_pn4_map248_20260708-190319.mtl  target_pn4_map248_20260708-190320.json  target_pn4_map248_20260708-190320.mtl  target_pn4_map248_20260708-190322.json  target_pn4_map248_20260708-190322.mtl  target_pn4_map248_20260708-190322_tex0.tga  target_pn4_map248_20260708-190323.json  target_pn4_map248_20260708-190323.mtl  target_pn4_map248_20260708-190324.json  target_pn4_map248_20260708-190324.mtl  target_pn4_map248_20260708-190325.json  target_pn4_map248_20260708-190325.mtl  target_pn4_map248_20260708-190326.json  target_pn4_map248_20260708-190326.mtl  target_pn4_map248_20260708-190327.json  target_pn4_map248_20260708-190327.mtl  target_pn4_map248_20260708-190328.json  target_pn4_map248_20260708-190328.mtl  target_pn4_map248_20260708-190329.json  target_pn4_map248_20260708-190329.mtl  target_pn4_map248_20260708-190330.json  target_pn4_map248_20260708-190330.mtl  target_pn4_map248_20260708-190331.json  target_pn4_map248_20260708-190331.mtl  target_pn4_map248_20260708-190332.json  target_pn4_map248_20260708-190332.mtl  target_pn4_map248_20260708-190333.json  target_pn4_map248_20260708-190333.mtl  target_pn4_map248_20260708-190334.json  target_pn4_map248_20260708-190334.mtl  target_pn4_map248_20260708-190334_tex1.tga  target_pn4_map248_20260708-190335.json  target_pn4_map248_20260708-190335.mtl  target_pn4_map248_20260708-190336.json  target_pn4_map248_20260708-190336.mtl
labels/players-klaus/: target_pn1_map280_20260708-192143.json  target_pn1_map280_20260708-192143.mtl  target_pn1_map280_20260708-192143_tex0.tga  target_pn1_map280_20260708-192143_tex1.tga  target_pn1_map280_20260708-192143_tex5.tga  target_pn30_map248_20260708-190912.json  target_pn30_map248_20260708-190912.mtl  target_pn30_map248_20260708-190912_tex2.tga  target_pn30_map248_20260708-190954.json  target_pn30_map248_20260708-190954.mtl  target_pn30_map248_20260708-191303.json  target_pn30_map248_20260708-191303.mtl  target_pn30_map248_20260708-191303_tex1.tga
labels/shields-tormented_shield-275603/: target_pn1_map280_20260708-192229.json  target_pn1_map280_20260708-192229.mtl  target_pn1_map280_20260708-192333.json  target_pn1_map280_20260708-192333.mtl  target_pn1_map280_20260708-192333_tex1.tga  target_pn30_map248_20260708-191103.json  target_pn30_map248_20260708-191103.mtl  target_pn30_map248_20260708-191143.json  target_pn30_map248_20260708-191143.mtl
output/: warrior-face-only.mtl
renders/: MODEL-EXPORT-SETTINGS.md
tools/: BLENDER_RENDER_V2.md  THREEJS.md  _blender_render_v0.py  blender_audit.py  blender_clean.py  blender_render.py  blender_render_v2.py  build_datcore_local.sh  build_macos_gui.sh  build_remote.ps1  clean_export.py  gw-cmd.sh  gw-confirm.sh  gw-ctl.sh  gw-loop.sh  gwt.sh  install-sshd-watchdog.ps1  obj_render.py  seed_labels.sh
